# convert-config-hook

./: .pre-commit-hooks.yaml  README.md  convert.py  pyproject.toml
.github/workflows/: python-app.yml
examples/: example.toml  example.yaml
